tests/snapshots/parser_error_fixtures/MultiDeclarationErrors.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/MultiDeclarationErrors.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Constructor Field Separator

I was expecting `,` or `)` between constructor fields, but I found an identifier.

  examples/parser_errors/MultiDeclarationErrors.flx:3:18
  |
3 |         Pair(Int String),
  |                  ^^^^^^

Note:
  while parsing module `MultiDeclarationErrors` > data declaration `Pair`


error[E034]: Invalid Data Constructor

I was expecting a constructor name in this `data` declaration, but I found an integer literal.

  examples/parser_errors/MultiDeclarationErrors.flx:4:9
  |
4 |         123
  |         ^^^

Note:
  while parsing module `MultiDeclarationErrors` > data declaration `Pair`


error[E034]: Missing Effect Operation Colon

Missing `:` in effect operation signature. Write it as `op: Type -> Return`.

  examples/parser_errors/MultiDeclarationErrors.flx:8:15
  |
8 |         print String -> Unit
  |               ^^^^^^

Note:
  while parsing module `MultiDeclarationErrors` > effect `Console`


error[E034]: Unexpected Token

Expected `:` after effect operation name.

  examples/parser_errors/MultiDeclarationErrors.flx:9:28
  |
9 |         log: String String -> Unit
  |                            ^^

Hint:
  Effect operation signatures use `op: Type -> Return`.

Note:
  while parsing module `MultiDeclarationErrors` > effect `Console`


error[E034]: Missing Constructor Field Separator

I was expecting `,` or `)` between constructor fields, but I found an identifier.

  examples/parser_errors/MultiDeclarationErrors.flx:13:26
   |
13 |     type Result = Ok(Int String) | Err(String)
   |                          ^^^^^^

Note:
  while parsing module `MultiDeclarationErrors`

Found 5 errors.
== stdout ==
<not executed>
