tests/snapshots/parser_error_fixtures/MultiDelimiterErrors.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/MultiDelimiterErrors.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Closing Delimiter

Expected `)` to close this tuple literal.

  examples/parser_errors/MultiDelimiterErrors.flx:3:25
  |
3 |         let pair = (1, 2]
  |                         ^

Hint:
  Add `)` after the last tuple element.

Note:
  while parsing module `MultiDelimiterErrors` > function `delimiters`


error[E076]: Missing Closing Delimiter

Expected a closing `]` to match this opening `[`.

  examples/parser_errors/MultiDelimiterErrors.flx:4:18
  |
4 |         let xs = [1, 2, 3
  |                  ^

Note:
  while parsing module `MultiDelimiterErrors` > function `delimiters`

note: Expected `]` before this token.
  examples/parser_errors/MultiDelimiterErrors.flx:5:9
  |
5 |         let h = { "a" 1 }
  |         ^^^


error[E034]: Missing Hash Colon

This hash entry needs `:` between the key and value.

  examples/parser_errors/MultiDelimiterErrors.flx:5:23
  |
5 |         let h = { "a" 1 }
  |                       ^

Hint:
  Hash literals use `{key: value, ...}`.

Note:
  while parsing module `MultiDelimiterErrors` > function `delimiters`


error[E073]: Missing Comma

Missing comma between arguments.

  examples/parser_errors/MultiDelimiterErrors.flx:6:23
  |
6 |         let r = add(1 2)
  |                       ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.

Note:
  while parsing module `MultiDelimiterErrors` > function `delimiters`


error[E034]: Missing Closing Delimiter

Expected `)` to close this grouped expression.

  examples/parser_errors/MultiDelimiterErrors.flx:7:23
  |
7 |         let g = (1 + 2]
  |                       ^

Hint:
  Add `)` after the expression.

Note:
  while parsing module `MultiDelimiterErrors` > function `delimiters`

Found 5 errors.
== stdout ==
<not executed>
