tests/snapshots/parser_error_fixtures/broken_import_alias.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/broken_import_alias.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Import Alias

This import alias needs a name after `as`.

  examples/parser_errors/broken_import_alias.flx:1:13
  |
1 | import Demo as
  |             ^^

Hint:
  Import aliases use `import Module as Alias`.
== stdout ==
<not executed>
