tests/snapshots/parser_error_fixtures/eof_after_else.snap
---
source: tests/error_fixtures/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/eof_after_else.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Else Body

This `else` branch needs to start with `{`.

  examples/parser_errors/eof_after_else.flx:2:31
  |
2 |     let value = if true { 1 } else
  |                               ^^^^
  |                               ---- `else` starts here

Note:
  while parsing function `main` > `if` expression

Help:
  Try adding `{` after `else`.
== stdout ==
<not executed>
