tests/snapshots/parser_error_fixtures/eof_after_module_name.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/eof_after_module_name.flx
== compile ==
failed (parse)
== diagnostics ==
Error[E034]: Missing Module Body

This module body needs to start with `{`.

  examples/parser_errors/eof_after_module_name.flx:2:1
  |

Hint:
  Module declarations use `module Name { ... }`.

Note:
  while parsing module `Demo`
== stdout ==
<not executed>
