tests/snapshots/parser_error_fixtures/extra_closing_bracket_in_group.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/extra_closing_bracket_in_group.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Closing Delimiter

Expected `)` to close this grouped expression.

  examples/parser_errors/extra_closing_bracket_in_group.flx:2:23
  |
2 |     let value = (1 + 2]
  |                       ^

Hint:
  Add `)` after the expression.

Note:
  while parsing function `main`
== stdout ==
<not executed>
