tests/snapshots/parser_error_fixtures/implicit_row_var_in_with_clause.snap
---
source: tests/error_fixtures/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/implicit_row_var_in_with_clause.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Unexpected Token

Implicit row variables are no longer supported in `with` clauses.

  examples/parser_errors/implicit_row_var_in_with_clause.flx:1:23
  |
1 | fn main() -> Int with e {
  |                       ^

Hint:
  Rewrite using an explicit tail variable: `with |e`.

Note:
  while parsing function `main`
== stdout ==
<not executed>
