tests/snapshots/parser_error_fixtures/malformed_handle_arm_arrow.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/malformed_handle_arm_arrow.flx
== compile ==
failed (parse)
== diagnostics ==
Error[E034]: Missing Handle Arm Arrow

Expected `->` in handle arm.

  examples/parser_errors/malformed_handle_arm_arrow.flx:2:47
  |
2 |     let _x = 1 handle IO { print(resume, msg) print(msg) }
  |                                               ^^^^^

Hint:
  Handle arms use `op(resume, arg1, ...) -> body`.

Note:
  while parsing function `main` > `handle` expression


Error[E034]: Unexpected Closing Delimiter

Unexpected `}` outside of a block.

  examples/parser_errors/malformed_handle_arm_arrow.flx:3:1
  |
3 | }
  | ^

Found 2 errors.
== stdout ==
<not executed>
