tests/snapshots/parser_error_fixtures/many_independent_errors.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/many_independent_errors.flx
== compile ==
failed (parse)
== diagnostics ==
Error[E034]: Missing Function Body

This function body needs to start with `{`.

  examples/parser_errors/many_independent_errors.flx:10:5
   |
 9 | fn first(x: Int) -> Int
   | - `first` starts here
10 |     x + 1
   |     ^
   |     - This looks like the function body

Note:
  while parsing function `first`

Help:
  Try adding `{` after the function signature.


Error[E034]: Missing Match Arm Arrow

I was expecting `->` in this match arm, but I found a string literal.

  examples/parser_errors/many_independent_errors.flx:14:11
   |
14 |         1 "one",
   |           ^^^^^

Note:
  while parsing `match` expression

Help:
  Write match arms as `match x { pattern -> body, ... }`.


Error[E034]: Missing Else Body

This `else` branch needs to start with `{`.

  examples/parser_errors/many_independent_errors.flx:18:35
   |
18 |     let _label = if true { "ok" } else "bad"
   |                                   ^^^^
   |                                   ---- `else` starts here

Note:
  while parsing `if` expression

Help:
  Try adding `{` after `else`.

Found 3 errors.
== stdout ==
<not executed>
