tests/snapshots/parser_error_fixtures/missing_comma_in_args.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/missing_comma_in_args.flx
== compile ==
failed (parse)
== diagnostics ==
Error[E073]: Missing Comma

Missing comma between arguments.

  examples/parser_errors/missing_comma_in_args.flx:8:20
  |
8 |     let _r = add(1 2)
  |                    ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.
== stdout ==
<not executed>
